# cmake-helloworld

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
